deploy/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry-proxy

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-proxy
  namespace: registry-proxy
spec:
  selector:
    matchLabels:
      app: registry-proxy
  template:
    metadata:
      labels:
        app: registry-proxy
    spec:
      serviceAccountName: registry-proxy
      containers:
      - name: registry-proxy
        image: ketches/registry-proxy:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 443
        volumeMounts:
        - name: webhook-certs
          mountPath: /etc/webhook/certs/
          readOnly: true
      volumes:
      - name: webhook-certs
        secret:
          secretName: registry-proxy-cert

---
apiVersion: v1
kind: Service
metadata:
  name: registry-proxy
  namespace: registry-proxy
spec:
  selector:
    app: registry-proxy
  ports:
  - port: 443
    targetPort: 443
  type: ClusterIP

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: registry-proxy-webhook
  annotations:
    cert-manager.io/inject-ca-from: registry-proxy/registry-proxy-cert
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: ""
    service:
      name: registry-proxy
      namespace: registry-proxy
      path: "/mutate"
  failurePolicy: Fail
  matchPolicy: Exact
  name: registry-proxy.registry-proxy.svc
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kube-system
      - kube-public
      - kube-node-lease
      - registry-proxy
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
  sideEffects: None
  timeoutSeconds: 3
